master fix readme and docs
