# storage/api-docs/api-docs.json
@@ -9,29 +9,24 @@
             "post": {
                 "summary": "Create new game",
                 "operationId": "createGame",
-                "requestBody": {
-                    "description": "Pass game data",
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "required": [
-                                    "width",
-                                    "height"
-                                ],
-                                "properties": {
-                                    "width": {
-                                        "type": "integer"
-                                    },
-                                    "height": {
-                                        "type": "integer"
-                                    }
-                                },
-                                "type": "object"
-                            }
+                "parameters": [
+                    {
+                        "name": "width",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "height",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
                         }
                     }
-                },
+                ],
                 "responses": {
                     "201": {
                         "description": "Поле создано",
@@ -69,20 +64,78 @@
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Ход успешно сделан"
+                    "200": {
+                        "description": "Game state",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "description": "game id",
+                                            "type": "string"
+                                        },
+                                        "field": {
+                                            "properties": {
+                                                "width": {
+                                                    "description": "field width",
+                                                    "type": "integer"
+                                                },
+                                                "height": {
+                                                    "description": "field height",
+                                                    "type": "integer"
+                                                },
+                                                "cells": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "properties": {
+                                                            "color": {
+                                                                "description": "cell color",
+                                                                "type": "string"
+                                                            },
+                                                            "playerId": {
+                                                                "description": "player id",
+                                                                "type": "integer"
+                                                            }
+                                                        },
+                                                        "type": "object"
+                                                    }
+                                                },
+                                                "players": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "properties": {
+                                                            "id": {
+                                                                "description": "player id",
+                                                                "type": "integer"
+                                                            },
+                                                            "color": {
+                                                                "description": "player color",
+                                                                "type": "string"
+                                                            }
+                                                        },
+                                                        "type": "object"
+                                                    }
+                                                },
+                                                "currentPlayerId": {
+                                                    "type": "integer"
+                                                },
+                                                "winnerPlayerId": {
+                                                    "type": "integer"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     },
                     "400": {
                         "description": "Неправильные параметры запроса"
                     },
-                    "403": {
-                        "description": "Игрок с указанным номером не может сейчас ходить"
-                    },
                     "404": {
                         "description": "Игра с указанным ID не существует"
-                    },
-                    "409": {
-                        "description": "Игрок с указанным номером не может выбрать указанный цвет"
                     }
                 }
             },
